Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-50163

QDoc memory leak with Qt 5.5.1 Windows, Linux, OS X

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.6.0
    • 5.5.1
    • Build tools: qdoc
    • None
    • Windows 10 build 10586, using MSVC 2013 version of Qt 5.5.1
    • macOS
    •  I08e8959ddb67b2d1f3b1bf44d9dc48624bafebfa

      I checked out qml-material (https://github.com/papyros/qml-material), and built it without problems. However, when I went to build the documentation (running "qdoc material.qdocconf --outputformat HTML" the memory usage of Qdoc quickly rose to over 10gb! I only noticed it had happened when I got a warning from Windows, and at that point, my computer crashed.

      I was able to reproduce this on my computer.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            gbk Martin Smith (Qt)
            IronManMark20 Ethan S
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes